--- a/final_project_proposal.Rmd
+++ b/final_project_proposal.Rmd
@@ -22,7 +22,7 @@ A member of the team, Aakriti, is involved in a startup called [Heartbeat](https
 
 ## The intended final products
 * Visualizations/statistical models showing associations between cardiovascular mortality and risk factors, including location specific (at the county level) visualizations
-* Interactive Shiny tool that will allow patients to input their data
+* Interactive Shiny tool that will allow patients to input their data (observe change in risk based on behavior/health changes)
 
 ## The anticipated data sources
 * [Risk Factors by County (2013 to 2015)](http://www.countyhealthrankings.org/explore-health-rankings/rankings-data-documentation?fbclid=IwAR1YHiMm53wKQCr3nE_AhvKumi_jpJvR_HUMkQVy8ZxZKnzT2AHPhE_IwYU)
