--- a/final_project_proposal.Rmd
+++ b/final_project_proposal.Rmd
@@ -8,6 +8,7 @@ output: github_document
 ## The group members (names and UNIs)
 
 * Aakriti Gupta: ag3786
+* Alex Goldstein: ajg2231
 * Annie Clark: alc2279
 * Jiyue Qin: jq2293
 * Margaret Gacheru: mg3861
