--- a/data_processing.Rmd
+++ b/data_processing.Rmd
@@ -5,12 +5,237 @@ date: "November 19, 2018"
 output: github_document
 ---
 
-```{r setup}
-library(tidyverse)
 
+Risk factors:: (15 total)
+
+* ACCESS2: Current lack of health insurance among adults aged 18<89><db><d2>64 Years
+* BINGE: Binge drinking among adults aged >=18 Year
+* BPHIGH: High blood pressure among adults aged >=18 Year
+* BPMED: Taking medicine for high blood pressure control among adults aged >=18 Years with high blood pressure
+* OBESITY: Obesity among adults aged >=18 Years
+* CHECKUP: Visits to doctor for routine checkup within the past Year among adults aged >=18 Years
+* CHOLSCREEN: Cholesterol screening among adults aged >=18 Years
+* CSMOKING: Current smoking among adults aged >=18 Years
+* DIABETES: Diagnosed diabetes among adults aged >=18 Years
+* HIGHCHOL: High cholesterol among adults aged >=18 Years who have been screened in the past 5 Years
+* KIDNEY: Chronic kidney disease among adults aged >=18 Years
+* LPA: No leisure-time physical activity among adults aged >=18 Years
+* MHLTH: Mental health not good for >=14 days among adults aged >=18 Years
+* PHLTH: Physical health not good for >=14 days among adults aged >=18 Years
+* SLEEP: Sleeping less than 7 hours among adults aged >=18 Years
+
+
+Outcomes:: (2 total)
+
+* CHD: Coronary heart disease among adults aged >=18 Years
+* STROKE: Stroke among adults aged >=18 Years
+
+
+
+
+```{r, include=FALSE}
+library(stringr)
+library(purrr)
+library(viridis)
+library(ggrepel)
+library(data.table)
+library(ggmap)
+library(lubridate)
+library(plotly)
 ```
 
 ## load the data 
 ```{r cache = TRUE}
 data = read_csv("https://data.cdc.gov/api/views/6vp6-wxuq/rows.csv?accessType=DOWNLOAD")
 ```
+
+
+```{r cache = TRUE}
+cvrisk_url = "https://data.cdc.gov/api/views/6vp6-wxuq/rows.csv?accessType=DOWNLOAD"
+
+## Read in data from github
+cvrisk = 
+  read.csv(url(cvrisk_url)) %>% 
+  janitor::clean_names() %>% 
+  as_tibble()
+```
+
+
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+## Aakriti code from google doc
+cvrisk %>% 
+  filter(state_desc == "New York", city_name == "New York") %>% 
+  filter(measure %in% c("High blood pressure among adults aged >=18 Years", 
+                        "Coronary heart disease among adults aged >=18 Years"), 
+         geographic_level == "Census Tract", year == 2015) %>% 
+  select(unique_id, measure, data_value, population_count, geo_location) %>% 
+  spread(key = measure, value = data_value) %>% 
+  janitor::clean_names() %>% 
+  ggplot(aes(x = high_blood_pressure_among_adults_aged_18_years, 
+             y = coronary_heart_disease_among_adults_aged_18_years)) + 
+  geom_point()
+```
+
+
+
+```{r}
+## Aakriti code from google doc
+geo_nyc_cvrisk = cvrisk %>% 
+  filter(state_desc == "New York", city_name == "New York") %>% 
+  filter(measure %in% c("High blood pressure among adults aged >=18 Years", 
+                        "Coronary heart disease among adults aged >=18 Years"), 
+         geographic_level == "Census Tract", year == 2015) %>% 
+  select(unique_id, measure, data_value, population_count, geo_location) %>% 
+  spread(key = measure, value = data_value) %>% 
+  janitor::clean_names() %>%
+  separate(geo_location, into = c("latitude", "longitude"), sep = ",") %>% 
+  mutate(latitude = str_replace(latitude, "\\(", ""),
+         longitude = str_replace(longitude, "\\)", ""))
+
+```
+
+
+```{r}
+## Annie eda
+nyc_cvrisk = 
+  cvrisk %>% 
+  filter(state_desc == "New York", city_name == "New York")
+
+nyc_cvrisk %>% 
+  count(geographic_level)
+
+nyc_cvrisk %>% 
+  count(data_value_type)
+
+## filter just to Census Tract
+nyc_cvrisk = 
+  nyc_cvrisk %>% 
+  filter(geographic_level == "Census Tract")
+
+
+nyc_cvrisk %>% 
+  count(data_source)
+
+nyc_cvrisk %>% 
+  group_by(measure, measure_id, short_question_text) %>% 
+  count() %>% View()
+
+## one to one relationship between all three variables; only keeping measure_id
+
+##create lookup table for measusres
+
+cvrisk_measure_lookup = 
+  cvrisk %>% 
+  group_by(measure, measure_id, short_question_text) %>% 
+  count()
+
+nyc_cvrisk = 
+  nyc_cvrisk %>% 
+  select (-data_source, -geographic_level, -measure, -short_question_text)
+
+# look at missing values
+
+skimr::skim(nyc_cvrisk)
+
+## 591 missing values in data_value, high_confidence_limit and low_confidence_limit
+## take a deeper dive into these
+
+nyc_cvrisk %>% 
+  filter(is.na(data_value), is.na(high_confidence_limit), is.na(low_confidence_limit)) %>% 
+  count(data_value_footnote)
+
+## For all missing data values, footnote = Estimates suppressed for population less than 50
+
+nyc_cvrisk %>% 
+  filter(is.na(data_value), is.na(high_confidence_limit), is.na(low_confidence_limit)) %>% 
+  count(population_count)
+
+##for all missing values, population counts are less than 50, as the footnote says
+
+##removing all of the null values, just to make things easier for now
+nyc_cvrisk =
+  nyc_cvrisk %>% 
+  filter(!is.na(data_value)) %>% 
+  select(year, geo_location, geo_location, population_count, measure_id, data_value) %>% 
+  janitor::clean_names()
+
+nyc_cvrisk %>% 
+  group_by(year, geo_location) %>% 
+  summarise(n = n()) %>% 
+  ungroup() %>% 
+  select(n) %>% 
+  group_by(n) %>% 
+  count()
+
+##each geo_location/year combination has either 8 or 20 measures associated with it (there are 7 that have less than 8 measures)
+
+## lets look at by year
+nyc_cvrisk %>% 
+  group_by(year, geo_location) %>% 
+  summarise(n = n()) %>% 
+  ungroup() %>% 
+  select(year, n) %>% 
+  group_by(year, n) %>% 
+  count()
+
+## all 2015 data has 20 measures; 2014 data has 8 or less measures
+
+## let's get a breakdown of measures by year
+
+nyc_cvrisk %>% 
+  filter(year == 2015) %>% 
+  count(measure_id)
+
+
+
+nyc_cvrisk %>% 
+  filter(year == 2014) %>% 
+  count(measure_id)
+
+## THIS IS AN ISSUE:
+## 2015 and 2014 do not have all 28 measures; 2015 has 20 and 2014 has 8
+## there is no overlap between the risk factors from both of the years
+## because 2015 has more risk factors and only one of the risk factors only included in 2014 
+## is on the list of risk factors that we are interested in looking at, I am going to remove
+## 2014 data
+
+nyc_cvrisk_2015 = 
+  nyc_cvrisk %>% 
+  filter(year == 2015) %>% 
+  select(-year)
+
+nyc_cvrisk_2015 %>% 
+  count(geo_location) %>% 
+  arrange(desc(n))
+
+## all geo_locations have 20 measures
+
+## I think I am feeling relatively comfortable with what's in the data; can start visualizing it
+
+## split up lat/long
+
+nyc_cvrisk_2015 = 
+  nyc_cvrisk_2015 %>% 
+  separate(geo_location, into = c("latitude", "longitude"), sep = ",") %>% 
+  mutate(latitude = str_replace(latitude, "\\(", ""),
+         longitude = str_replace(longitude, "\\)", ""))
+
+## only select risk factors and outcomes we're interested in:
+
+nyc_cvrisk_2015 =
+  nyc_cvrisk_2015 %>% 
+  filter(measure_id %in% c("ACCESS2", "BINGE", "BPHIGH", "BPMED", "OBESITY", "CHECKUP", 
+                         "CHOLSCREEN", "CSMOKING", "DIABETES", "HIGHCHOL", "KIDNEY", 
+                         "LPA", "MHLTH", "PHLTH", "SLEEP", "CHD", "STROKE"))
+  
+
+nyc_cvrisk_2015 %>%
+  ggplot(aes(x = measure_id, y = data_value)) + 
+  geom_boxplot() +
+  theme(axis.text.x = element_text(angle = 60, hjust = 1))
+
+
+
+```
+
