--- a/data_processing.Rmd
+++ b/data_processing.Rmd
@@ -560,4 +560,113 @@ cvrisk = read_csv(file = "./raw_data/500_Cities__Local_Data_for_Better_Health__2
 
 ```
 
+Heat maps of the outcome (CHD) and covariates
 
+Top 10 cities with coronary heart disease (external factors)
+
+```{r}
+
+top = nyc_cvrisk%>%
+  group_by( city_name)%>%
+  summarize(Outcome = median(coronary_heart_disease),
+            Checkup = median(annual_checkup),
+            Cholesterol_Screen = median(cholesterol_screening),
+            Smoking = median(current_smoking),
+            Insurance = median(health_insurance),
+            Inactivity = median(physical_inactivity),
+            Binge_Drinking = median(binge_drinking))%>%
+  arrange(desc(Outcome))%>%
+  head(10)
+
+row.names(top) = top$city_name
+
+top_matrix = top%>%select(-city_name)%>%data.matrix(top) 
+
+levelplot(top_matrix, col.regions=heat.colors, colorkey=list(space="right"),
+          xlab = "", ylab = "", main = "Top 10 Cities with Coronary Heart Disease (External Factors)")
+```
+
+
+Bottom 10 cities with coronary heart disease (external factors)
+
+```{r}
+
+bottom = nyc_cvrisk%>%
+  group_by( city_name)%>%
+  summarize(Outcome = median(coronary_heart_disease),
+            Checkup = median(annual_checkup),
+            Cholesterol_Screen = median(cholesterol_screening),
+            Smoking = median(current_smoking),
+            Insurance = median(health_insurance),
+            Inactivity = median(physical_inactivity),
+            Binge_Drinking = median(binge_drinking))%>%
+  filter(Outcome != "NA")%>%
+  arrange(Outcome)%>%
+  head(10)
+
+row.names(bottom) = bottom$city_name
+
+bottom_matrix = bottom%>%select(-city_name)%>%data.matrix(bottom) 
+
+library(lattice)
+levelplot(bottom_matrix, col.regions=heat.colors, colorkey=list(space="right"),
+          xlab = "", ylab = "", main = "Bottom 10 Cities with Coronary Heart Disease (External Factors)")
+
+```
+
+
+Top 10 cities with coronary heart disease (internal factors)
+
+```{r}
+
+top = nyc_cvrisk%>%
+  group_by( city_name)%>%
+  summarize(Outcome = median(coronary_heart_disease),
+            Arthritis = median(arthritis),
+            Kidney_Disease = median(chronic_kidney_disease),
+            COPD = median(copd),
+            Diabetes = median(diabetes),
+            High_Blood_Pressure = median(high_blood_pressure),
+            High_Cholesterol = median(high_cholesterol),
+            Stroke = median(stroke))%>%
+  arrange(desc(Outcome))%>%
+  head(10)
+
+row.names(top) = top$city_name
+
+top_matrix = top%>%select(-city_name)%>%data.matrix(top) 
+
+levelplot(top_matrix, col.regions=heat.colors, colorkey=list(space="right"),
+          xlab = "", ylab = "", main = "Top 10 Cities with Coronary Heart Disease (Internal Factors)")
+```
+
+
+Bottom 10 cities with coronary heart disease (internal factors)
+
+```{r}
+
+bottom = nyc_cvrisk%>%
+  group_by( city_name)%>%
+  summarize(Outcome = median(coronary_heart_disease),
+            Arthritis = median(arthritis),
+            Kidney_Disease = median(chronic_kidney_disease),
+            COPD = median(copd),
+            Diabetes = median(diabetes),
+            High_Blood_Pressure = median(high_blood_pressure),
+            High_Cholesterol = median(high_cholesterol),
+            Stroke = median(stroke))%>%
+  filter(Outcome != "NA")%>%
+  arrange(Outcome)%>%
+  head(10)
+
+row.names(bottom) = bottom$city_name
+
+bottom_matrix = bottom%>%select(-city_name)%>%data.matrix(bottom) 
+
+library(lattice)
+levelplot(bottom_matrix, col.regions=heat.colors, colorkey=list(space="right"),
+          xlab = "", ylab = "", main = "Bottom 10 Cities with Coronary Heart Disease (Internal Factors)")
+
+```
+
+It is difficult to visually see the relationships between the variables (even when there is a high correlation) because the range in each variable is fairly small
