Edits to gganimate

--- a/final_project_report.Rmd
+++ b/final_project_report.Rmd
@@ -70,7 +70,7 @@ In order to predict risk for heart disease for an individual, we utilized the [F
 
 
 #Additional Analysis
-
+After 
 
 
 #Discussion
