--- a/data_processing.Rmd
+++ b/data_processing.Rmd
@@ -384,11 +384,11 @@ theme_set(theme_bw())  # pre-set the bw theme.
 
 ## using transition_length and state_length
 p <- 
-  ggplot() +
-  geom_point(data = nyc_cvrisk_joined, aes(x = chd_value, y = data_value, 
-                                           size = population_count, colour = short_question_text),
+  ggplot(data = nyc_cvrisk_joined, aes(x = chd_value, y = data_value, frame = short_question_text)) +
+  geom_point(data = nyc_cvrisk_joined, aes( 
+                                           size = population_count, colour = short_question_text ),
              alpha = 0.5) + 
-  
+  ggtitle(nyc_cvrisk_joined$short_question_text) +
   
   labs(
        x = 'Coronary Heart Prevalence', 
