--- a/final_project_report.Rmd
+++ b/final_project_report.Rmd
@@ -62,15 +62,134 @@ We sought to examine the risk factors for heart disease and their prevalence in 
 
 In order to address the first two questions, we utilized the [500 Cities: Local Data for Better Health](https://catalog.data.gov/dataset/500-cities-local-data-for-better-health-b32fd) dataset. The 500 Cities project is a collaboration between CDC, the Robert Wood Johnson Foundation, and the CDC Foundation. The purpose of the 500 Cities Project is to provide city- and census tract-level small area estimates for chronic disease risk factors, health outcomes, and clinical preventive service use for the largest 500 cities in the United States. These small area estimates will allow cities and local health departments to better understand the burden and geographic distribution of health-related variables in their jurisdictions, and assist them in planning public health interventions. Since we were interested in visualizing these data only for New York city, we filtered the dataset to include data only from New York city.
 
+Risk factors that we're interested in:: (15 total)
+
+* ACCESS2: Current lack of health insurance among adults aged 18<89><db><d2>64 Years
+* BINGE: Binge drinking among adults aged >=18 Year
+* BPHIGH: High blood pressure among adults aged >=18 Year
+* BPMED: Taking medicine for high blood pressure control among adults aged >=18 Years with high blood pressure
+* OBESITY: Obesity among adults aged >=18 Years
+* CHECKUP: Visits to doctor for routine checkup within the past Year among adults aged >=18 Years
+* CHOLSCREEN: Cholesterol screening among adults aged >=18 Years
+* CSMOKING: Current smoking among adults aged >=18 Years
+* DIABETES: Diagnosed diabetes among adults aged >=18 Years
+* HIGHCHOL: High cholesterol among adults aged >=18 Years who have been screened in the past 5 Years
+* KIDNEY: Chronic kidney disease among adults aged >=18 Years
+* LPA: No leisure-time physical activity among adults aged >=18 Years
+* MHLTH: Mental health not good for >=14 days among adults aged >=18 Years
+* PHLTH: Physical health not good for >=14 days among adults aged >=18 Years
+* SLEEP: Sleeping less than 7 hours among adults aged >=18 Years
+
+
+Outcomes that we're interested in:: (2 total)
+
+* CHD: Coronary heart disease among adults aged >=18 Years
+* STROKE: Stroke among adults aged >=18 Years
+
 In order to predict risk for heart disease for an individual, we utilized the [Framigham Risk Score](https://en.wikipedia.org/wiki/Framingham_Risk_Score). The Framingham Risk Score is a gender-specific algorithm used to estimate the 10-year cardiovascular risk of an individual. The Framingham Risk Score was first developed based on data obtained from the [Framingham Heart Study](https://en.wikipedia.org/wiki/Framingham_Heart_Study), to estimate the 10-year risk of developing coronary heart disease. We utilized the algorithm to develop visualization in ShinyApp as discussed below.
 
 
 #Exploratory Analysis
 
+###Loading and tidying the data
+
+We scraped the data directly from the web as seen in the code below and called it `cvrisk`.
+
+```{r cache = TRUE}
+cvrisk_url = "https://data.cdc.gov/api/views/6vp6-wxuq/rows.csv?accessType=DOWNLOAD"
+
+## Read in data from github
+cvrisk = 
+  read.csv(url(cvrisk_url)) %>% 
+  janitor::clean_names() %>% 
+  as_tibble()
+```
+
+We then restricted our database to New York City and included only the variables that were useful for further data visualization. We called this database `nyc_cvrisk`.
+
+```{r cache = TRUE}
+nyc_cvrisk = 
+  cvrisk %>% 
+  filter(state_desc == "New York", city_name == "New York",
+         geographic_level == "Census Tract",
+         !is.na(data_value),
+         ##year == 2016,
+         measure_id %in% c("ACCESS2", "BINGE", "BPHIGH", "BPMED", "OBESITY", "CHECKUP", 
+                         "CHOLSCREEN", "CSMOKING", "DIABETES", "HIGHCHOL", "KIDNEY", 
+                         "LPA", "MHLTH", "PHLTH", "SLEEP", "CHD", "STROKE")) %>% 
+  separate(geo_location, into = c("latitude", "longitude"), sep = ",") %>% 
+  mutate(latitude = str_replace(latitude, "\\(", ""),
+         longitude = str_replace(longitude, "\\)", "")) %>% 
+  select(unique_id, latitude, longitude, population_count, measure_id, data_value, short_question_text)
+```
+
+###Making the animated scatterplot
+We first created another dataset that can be used for the animated scatterplot such that the outcome measure for coronary artery disease appears as a separate variable in the dataset.
+
+```{r}
+chd_by_id = nyc_cvrisk %>% 
+  group_by(unique_id) %>% 
+  summarise(chd_value = max(data_value)) 
+
+nyc_cvrisk_joined = left_join(nyc_cvrisk, chd_by_id, by = "unique_id")
+```
+
+We then installed the package required for animation
+```{r, eval=FALSE}
+devtools::install_github("dgrtwo/gganimate")
+```
+
+We then created an animated scatterplot with Coronary Heart DIsease prevalence on the X-axis and different risk factors on the Y-axis
+```{r, eval=FALSE}
+theme_set(theme_bw())  # pre-set the bw theme.
+
+
+## using transition_length and state_length
+library(ggplot2)
+library(gganimate)
+p <- 
+  ggplot(data = nyc_cvrisk_joined, aes(x = chd_value, y = data_value, frame = short_question_text, label = short_question_text)) +
+  geom_point(data = nyc_cvrisk_joined, aes( 
+                                           size = population_count, colour = short_question_text ),
+             alpha = 0.5) + 
+  
+  labs(title = {nyc_cvrisk_joined$short_question_text},
+       x = 'Coronary Heart Disease Prevalence', 
+       y = 'Risk Factor Prevalence') +
+  
+  # gganimate parts
+  transition_states(short_question_text, transition_length = 1, state_length = 50000, wrap = TRUE) +
+  enter_fade() +
+  exit_fade()
+
+animate(p, fps = 1)
+```
+
+###Making the correlation plot
+To make the correlation plot, we first transformed our dataset in the wide format and called it `nyc_cvrisk_wide`.
+
+```{r}
+library(corrplot)
+nyc_cvrisk_wide = 
+  nyc_cvrisk %>% 
+  spread(key = measure_id, value = data_value) %>% 
+  janitor::clean_names()
+```
+
+We then created the correlation plot as follows:
+
+```{r}
+nyc_cvrisk_wide %>% 
+  select(access2:stroke) %>% 
+  cor()%>%
+  corrplot(., method="circle")
+```
 
 
 #Additional Analysis
-After 
+We used the Shiny Application and leaflet package to perform visualization of geographic distribution of several risk factors and outcomes in New York City.
+
+We also used Shiny Application to build a program to calculate individual risk of heart disease using the Framingham Risk Score
 
 
 #Discussion
