--- a/final_project_report.Rmd
+++ b/final_project_report.Rmd
@@ -113,7 +113,7 @@ nyc_cvrisk =
   filter(state_desc == "New York", city_name == "New York",
          geographic_level == "Census Tract",
          !is.na(data_value),
-         ##year == 2016,
+         #year == 2016,
          measure_id %in% c("ACCESS2", "BINGE", "BPHIGH", "BPMED", "OBESITY", "CHECKUP", 
                          "CHOLSCREEN", "CSMOKING", "DIABETES", "HIGHCHOL", "KIDNEY", 
                          "LPA", "MHLTH", "PHLTH", "SLEEP", "CHD", "STROKE")) %>% 
@@ -170,18 +170,35 @@ To make the correlation plot, we first transformed our dataset in the wide forma
 
 ```{r}
 library(corrplot)
+
 nyc_cvrisk_wide = 
   nyc_cvrisk %>% 
-  spread(key = measure_id, value = data_value) %>% 
+  select(-measure_id)%>%
+  spread(key = short_question_text, value = data_value) %>% 
   janitor::clean_names()
 ```
 
-We then created the correlation plot as follows:
+The correlation plot for coronary heart disease and risk factors of interest is as follows:
 
 ```{r}
+
 nyc_cvrisk_wide %>% 
-  select(access2:stroke) %>% 
-  cor()%>%
+  select(annual_checkup:sleep_7_hours) %>% 
+  select("coronary_heart_disease", everything())%>%
+  cor() %>% 
+  corrplot(., method="circle")
+
+```
+
+The correlation plot for stroke and risk factors of interest is as follows:
+
+```{r}
+
+nyc_cvrisk_wide %>% 
+  select(annual_checkup:stroke) %>% 
+  select("stroke", everything())%>%
+  select(-coronary_heart_disease)%>%
+  cor() %>% 
   corrplot(., method="circle")
 ```
 
